changed root gap and fixed top header bug

--- a/src/app/components/contact-form/contact-form.component.scss
+++ b/src/app/components/contact-form/contact-form.component.scss
@@ -4,7 +4,7 @@ main {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    height: 100vh;
+    height: 100%;
     width: 100%;
     .form-container {
         display: grid;
