--- a/src/app/components/projects-section/projects-section.component.scss
+++ b/src/app/components/projects-section/projects-section.component.scss
@@ -2,7 +2,6 @@ section{
     display: flex;
     flex-direction: column;
     gap: 10px;
-    margin-bottom: 50px;
     main{
         ul{
             display: grid;
