--- a/src/styles.scss
+++ b/src/styles.scss
@@ -47,4 +47,5 @@ app-root {
     height: 100%;
     width: 100%;
     padding: 0 100px;
+    gap: 3rem;
 }
